    Closes: bug#510083.
  * Remove manpage that will be provided by manpages-dev.  Closes: bug#506515,
    bug#505784.
  * debian/copyright: update.  Closes: bug#506881.
  * any/submitted-popen.diff: new patch from Gentoo to fix popen() on >= 2.6.27
    kernels.  Closes: bug#512238.
  * arm/submitted-setjmp.diff: new patch to fix build on arm.

  [ Clint Adams ]
  * patches/any/cvs-bz697-posix-regexec.diff: regex fix from Paolo Bonzini.
  * patches/any/cvs-bz9697-posix-regcomp.diff: regex fix from Paolo Bonzini,
    closes: #510219.
  * patches/localedata/submitted-bz9725-locale-sv_SE.diff: fix from David
    Weinehall for incorrect sv_SE date format.  closes: #489960.
  * patches/any/cvs-bz9706-nss_nss-files_files-parse.diff: unify NSS
    behavior between 32-bit and 64-bit platforms.  addresses: #483645.
  * localedata/submitted-bz9730-locale-sv_FI.diff: make sv_FI time format
    conform to that of fi_FI.  closes: #489946.
  * Rename patches/localedata/el_CY_euro.diff to
    patches/localedata/submitted-bz9731-el_CY_euro.diff.
  * Rename patches/localedata/dz_BT-collation.diff to
    patches/localedata/submitted-bz9732-dz_BT-collation.diff.

  [ Arthur Loiret ]
  * patches/any/local-nss-overflow.diff: new patch to ignore uids greater
    than UINT_MAX.  Closes: #483645.
  * patches/hppa/submitted-tsd.diff: new patch from to fix build on hppa.
    Closes: bug#511430.

 -- Aurelien Jarno <aurel32@debian.org>  Sun, 18 Jan 2009 23:25:16 +0100

glibc (2.8+20080809-3) experimental; urgency=low

  [ Aurelien Jarno ]
  * New upstream release.
    - Fix conversions to ISO-2022-JP.  Closes: #466340.
    - "Tarballs are a completely outdated concept":
      + use a flat .orig.tar.gz
      + rules.d/tarball.mk: remove all, add a get-orig-source target
      + rules.d/quilt.mk: fix the unpatch target
    - Update any/cvs-getaddrinfo.diff.
    - Update any/submitted-i686-timing.diff.
    - Update hurd-i386/cvs-lock-memory-clobber.diff.