@@ -89,8 +89,8 @@ docdir=$(prefix)/share/doc
 mandir=$(prefix)/share/man
 sbindir=$(prefix)/sbin
 
-BUILD_CC = gcc-4.3
-BUILD_CXX = g++-4.3
+BUILD_CC = gcc
+BUILD_CXX = g++
 
 RUN_TESTSUITE = yes
 
@@ -99,8 +99,8 @@ ifneq ($(DEB_HOST_ARCH),$(DEB_BUILD_ARCH))
 CC     = $(DEB_HOST_GNU_TYPE)-gcc
 CXX    = $(DEB_HOST_GNU_TYPE)-g++
 else
-CC     = $(BUILD_CC)
-CXX    = $(BUILD_CXX)
+CC     = gcc-4.3
+CXX    = gcc-4.3
 endif
 
 BUILD_CFLAGS = -O2 -g
