@@ -55,6 +55,8 @@ glibc (2.9-0exp2) UNRELEASED; urgency=low
   * any/submitted-popen.diff: new patch from Gentoo to fix popen() on >= 2.6.27
     kernels.  Closes: bug#512238.
   * arm/submitted-setjmp.diff: new patch to fix build on arm.
+  * debian/rules: set BUILD_CC (host compiler) to gcc, and set CC (target
+    compiler) to gcc-4.3. The later can be override on a per target basis.
 
   [ Clint Adams ]
   * patches/any/cvs-bz697-posix-regexec.diff: regex fix from Paolo Bonzini.
@@ -77,7 +79,7 @@ glibc (2.9-0exp2) UNRELEASED; urgency=low
   * patches/hppa/submitted-tsd.diff: new patch from to fix build on hppa.
     Closes: bug#511430.
 
- -- Aurelien Jarno <aurel32@debian.org>  Sun, 18 Jan 2009 23:25:16 +0100
+ -- Aurelien Jarno <aurel32@debian.org>  Mon, 19 Jan 2009 20:05:52 +0100
 
 glibc (2.8+20080809-3) experimental; urgency=low
 
